ash-code/tui/src/app/snapshots/app__state__tests__advisor_question_draft.snap
---
source: ash-code/tui/src/app/state_tests.rs
assertion_line: 803
expression: rendered
---
  .                                                        [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ⏸ ask permissions on                                                          
  ╭──────────────────────────────────────────────────────────────────────────╮  
  │ > /advisor <question>                                                    │  
  ╰──────────────────────────────────────────────────────── Automatic model ─╯  
                                                                                
  Enter send  ·  shift+tab permissions  ·  /home
